# CAD

./: README.txt  RefObj.cpp  RefObj.h  StepSer.cpp  csg.stp  git_help.ba  git_help.txt  iraro.stp  verMacro.dsm
STEP/: .cproject  .gitignore  .project  AddressStep.cpp  AddressStep.h  Advanced_brep_shape_representationStep.cpp  Advanced_brep_shape_representationStep.h  Advanced_faceStep.cpp  Advanced_faceStep.h  Agito.cpp  Application_context.cpp  Application_context.h  Application_contextStep.cpp  Application_contextStep.h  Application_protocol_definitionStep.cpp  Application_protocol_definitionStep.h  AssemblyStep.cpp  Axis2_PlacementStep.cpp  Axis2_PlacementStep.h  Axis2_Placement_3dStep.cpp  Axis2_Placement_3dStep.h  Axis2_placement_2dStep.cpp  Axis2_placement_2dStep.h  Bounded_curveStep.cpp  Bounded_curveStep.h  CMakeLists.txt  Cartesian_pointStep.cpp  Cartesian_pointStep.h  Cartesian_pointStepPtrArray.cpp  Cartesian_pointStepPtrArray.h  Cartesian_tranformation_operatorStep.cpp  Cartesian_tranformation_operator_3dStep.cpp  Cartesian_tranformation_operator_3dStep.h  CircleStep.cpp  CircleStep.h  CircleStepPtrArray.cpp  CircleStepPtrArray.h  ConicStep.cpp  ConicStep.h  Conical_surfaceStep.cpp  (+165 more)
STEP/AdvancedRep/: Advanced_brep_shape_representationStep.cpp  ConicStep.cpp  Conical_surfaceStep.cpp  HyperbolaStep.cpp  Next_assembly_usage_occuranceStep.cpp  Next_assembly_usage_occuranceStep.h  README.md  Spherical_surfaceStep.cpp  Spherical_surfaceStep.h  StepAdvanced.cpp  Surface_of_linear_extrusionStep.cpp  Surface_of_linear_extrusionStep.h  Surface_of_revolutionStep.cpp  (+4 more)
(+39 files in other folders)
